fixed mobile view alignment

--- a/styles.css
+++ b/styles.css
@@ -746,7 +746,7 @@ textarea::placeholder {
 
   .nav {
     width: 100%;
-    height: 80px;
+    height: 60px;
 
     display: flex;
     justify-content: space-between;
@@ -761,8 +761,8 @@ textarea::placeholder {
     justify-content: center;
   }
   .logo img {
-    width: 130px;
-    height: 80px;
+    width: 120px;
+    height: 60px;
     margin: auto;
   }
 
@@ -991,8 +991,8 @@ textarea::placeholder {
     font-size: 18px;
     color: rgb(23, 12, 85);
   }
-  */ .services {
-    padding: 20px 10px;
+  .services {
+    padding: 20px 0px;
     margin-top: 50px;
     height: auto;
     text-align: center;
@@ -1004,15 +1004,6 @@ textarea::placeholder {
     font-size: 35px;
     margin-bottom: 10px;
   }
-  /* .services span:first-child {
-    color: goldenrod;
-  }
-  .services p {
-    color: rgb(23, 12, 85);
-  }
-
-
-
   .services-main {
     display: flex;
     align-items: center;
@@ -1022,6 +1013,13 @@ textarea::placeholder {
     height: auto;
     padding: 40px 0;
   }
+  .services span:first-child {
+    color: goldenrod;
+  }
+  .services p {
+    color: rgb(23, 12, 85);
+  }
+
   .services-box {
     width: 100%;
     height: 300px;
@@ -1041,12 +1039,12 @@ textarea::placeholder {
     object-fit: fill;
   }
 
-  /* .services-box h3 {
+  .services-box h3 {
     position: absolute;
     font-size: 25px;
     color: white;
     transition: all 0.3s linear;
-  } */
+  }
 
   /*choose us */
 
@@ -1284,6 +1282,12 @@ textarea::placeholder {
     font-size: 16px;
   } */
 
+  .contact p {
+    text-align: center;
+    color: rgb(23, 12, 85) !important;
+    font-size: 16px;
+  }
+
   .contact span {
     color: goldenrod;
   }
@@ -1357,6 +1361,7 @@ textarea::placeholder {
   .contact2 .fa {
     margin-right: 10px;
     color: goldenrod;
+    display: none;
   }
 
   .contact2 h5 {
